--- a/AmingHelper/options.html
+++ b/AmingHelper/options.html
@@ -3,7 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title></title>
-	<script type="text/javascript" src="js/options.js"></script>
+	<script type="text/javascript" src="js/bg/helper.js"></script>
+	<script type="text/javascript" src="js/opt/options.js"></script>
 </head>
 <body>
 	<label for="txt_time">背景图片地址</label>
