修改了效果 添加设置

--- a/AmingHelper/options.html
+++ b/AmingHelper/options.html
@@ -7,8 +7,34 @@
 	<script type="text/javascript" src="js/opt/options.js"></script>
 </head>
 <body>
-	<label for="txt_time">背景图片地址</label>
-	<input type="text" id="txt_bgurl" value="" style="width: 90%;" />
+	<label for="txt_bg">背景图片地址</label>
+	<input type="text" id="txt_bg" value="" style="width: 90%;" />
+	<br/>
+	<label for="txt_bg">搜索栏背景图片地址</label>
+	<input type="text" id="txt_sbg" value="" style="width: 80%;" />
+	<br/>
+	<label for="txt_bg">[导航]贴吧</label>
+	<input type="text" id="txt_nav1" value="" style="width: 90%;" />
+	<br/>
+	<label for="txt_bg">[导航]知道</label>
+	<input type="text" id="txt_nav2" value="" style="width: 90%;" />
+	<br/>
+	<label for="txt_bg">[导航]图片</label>
+	<input type="text" id="txt_nav3" value="" style="width: 90%;" />
+	<br/>
+	<label for="txt_bg">[导航]地图</label>
+	<input type="text" id="txt_nav4" value="" style="width: 90%;" />
+	<br/>
+	<label for="txt_bg">[导航]更多</label>
+	<input type="text" id="txt_nav5" value="" style="width: 90%;" />
+	<br/>
 
+	<label for="isShowSbg">显示搜索栏背景</label>
+    <input id="isShowSbg" type="checkbox" name="isShowSbg" checked>
+	<br/>
+	<label for="isShowNav">显示导航栏</label>
+    <input id="isShowNav" type="checkbox" name="isShowNav" checked>
+	<br/>
+<font color="red">导航的图片规格为400*100，搜索栏背景为720*220</font>
 </body>
 </html>
