--- a/AmingHelper/options.html
+++ b/AmingHelper/options.html
@@ -123,7 +123,7 @@
             <input type="text" id="txt_totop_bg" value="" style="width: 81%;" />
         </div>
         <div class="row">
-            <label for="isShowSbg">启用</label>
+            <label for="isShowToTop">启用</label>
             <input id="isShowToTop" type="checkbox" name="isShowToTop" checked>
         </div>
     </div>
