--- a/AmingHelper/options.html
+++ b/AmingHelper/options.html
@@ -123,6 +123,10 @@
             <input type="text" id="txt_totop_bg" value="" style="width: 81%;" />
         </div>
         <div class="row">
+            <label for="number_radius">按钮的圆角大小</label>
+            <input id="number_radius" type="number" min="0" max="50" name="number_radius" value="0">
+        </div>
+        <div class="row">
             <label for="isShowToTop">启用</label>
             <input id="isShowToTop" type="checkbox" name="isShowToTop" checked>
         </div>
