--- a/AmingHelper/options.html
+++ b/AmingHelper/options.html
@@ -109,6 +109,10 @@
             <input id="isShowNav" type="checkbox" name="isShowNav" checked>
         </div>
         <div class="row">
+            <label for="baidu_enabled">启用</label>
+            <input id="baidu_enabled" type="checkbox" name="baidu_enabled" checked>
+        </div>
+        <div class="row">
             <span class="red">导航的图片规格为400*100，搜索栏背景为720*220</span>
         </div>
 
@@ -127,8 +131,8 @@
             <input id="number_radius" type="number" min="0" max="50" name="number_radius" value="0">
         </div>
         <div class="row">
-            <label for="isShowToTop">启用</label>
-            <input id="isShowToTop" type="checkbox" name="isShowToTop" checked>
+            <label for="totop_enabled">启用</label>
+            <input id="totop_enabled" type="checkbox" name="totop_enabled" checked>
         </div>
     </div>
 </body>
