--- a/AmingHelper/options.html
+++ b/AmingHelper/options.html
@@ -135,5 +135,15 @@
             <input id="totop_enabled" type="checkbox" name="totop_enabled" checked>
         </div>
     </div>
+
+    <div class="group">
+        <div class="title">
+            摆渡贴吧
+        </div>
+        <div class="row">
+            <label for="baidutieba_removead">去掉楼中广告</label>
+            <input id="baidutieba_removead" type="checkbox" name="baidutieba_removead" checked>
+        </div>
+    </div>
 </body>
 </html>
